deploy/base/openehr-nodes/mumc/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumc-portal
  labels:
    app: mumc-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mumc-portal
  template:
    metadata:
      labels:
        app: mumc-portal
    spec:
      containers:
      - name: mumc-portal
        image: registry.prod.dh.unimaas.nl/docker-health/portal:latest
        ports:
        - containerPort: 3000
