deploy/base/openehr-nodes/mumc/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mumc-portal 
spec:
  selector:
    app: mumc-portal
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
